--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
     "react-router": "^5.0.1",
     "react-router-dom": "^5.0.1",
     "react-scripts": "3.0.1",
+    "redux": "^4.0.4",
+    "serve": "^11.1.0",
     "socket.io": "^2.2.0"
   },
   "scripts": {
