--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "react-router": "^5.0.1",
     "react-router-dom": "^5.0.1",
     "react-scripts": "3.0.1",
+    "react-transition-group": "^1.2.1",
     "redux": "^4.0.4",
     "serve": "^11.1.0",
     "socket.io": "^2.2.0"
