--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "html-react-parser": "^0.9.1",
     "react": "^16.8.6",
     "react-beforeunload": "^2.1.0",
+    "react-copy-to-clipboard": "^5.0.1",
     "react-dom": "^16.8.6",
     "react-redux": "^7.1.0",
     "react-router": "^5.0.1",
